--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "node-sass": "^4.13.1",
+    "prop-types": "latest",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
